--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pinecone>=5.0.0",
     "anthropic>=0.32.0",
     "voyageai>=0.2.3",
+    "langchain-cli>=0.0.28",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
