--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "embedd-all"
-version = "0.0.923"
+version = "0.0.925"
 description = "Embedd (docs, pdfs, excels, csv etc) -> RAG -> Query with LLMs"
 authors = [
     { name = "Arnab Bhattacharya", email = "arnab.bhattacharya28122000@gmail.com" }
@@ -16,7 +16,8 @@ dependencies = [
     "pypdf==4.2.0",
     "pinecone>=5.0.0",
     "anthropic>=0.32.0",
-    "voyageai>=0.2.3"
+    "voyageai>=0.2.3",
+    "python-docx>=1.1.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
