--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "embedd-all"
-version = "0.0.925"
+version = "0.0.938"
 description = "Embedd (docs, pdfs, excels, csv etc) -> RAG -> Query with LLMs"
 authors = [
     { name = "Arnab Bhattacharya", email = "arnab.bhattacharya28122000@gmail.com" }
@@ -18,6 +18,7 @@ dependencies = [
     "anthropic>=0.32.0",
     "voyageai>=0.2.3",
     "python-docx>=1.1.2",
+    "pypandoc-binary>=1.13",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -42,4 +43,4 @@ dev-dependencies = []
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/embedd_all"]
+packages = ["embedd_all"]
